--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.13.6"
+  },
+  "dependencies": {
+    "angular2": "^2.0.0-beta.17",
+    "es6-shim": "^0.35.1",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.6",
+    "systemjs": "^0.19.31",
+    "zone.js": "^0.6.12"
   }
 }
