--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-typescript": "^2.13.6"
+    "gulp-typescript": "^2.13.6",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-typescript-preprocessor": "^0.2.0",
+    "phantomjs-prebuilt": "^2.1.7",
+    "typescript": "^1.8.10"
   }
 }
